# ai-trading-bot

./: # Press ENTER to accept defaults, and set a passphrase if you like  # Press ENTER to accept defaults, and set a passphrase if you like..pub  .coverage  .env  .env.bak.1755100116  .env.bak.1755100769  .env.example  .env.institutional  .env.sample  .env.test  .env.testing  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  0001-runtime-threading-and-warnings.patch  404.html  =2.0  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_FIX_SUMMARY.md  CENTRALIZED_PARAMETERS_SUMMARY.md  CHANGELOG.md  CHANGES.md  CODING_AGENTS_GUIDE.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION_COMPLETE.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIX_SUMMARY.md  DEPENDENCY_FIXES_SUMMARY.md  DEPLOYING.md  DEPLOYMENT.md  DEV_REPORT.md  Dockerfile  ENHANCED_DEBUGGING_README.md  EXPLICIT_findings_high_medium_full.csv  EXPLICIT_targets_files_lines.csv  (+287 more)
.codex/: hooks.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  label-mapping.json  repository-metadata.md
PULL_REQUESTS/: 842.md
ai_trading/: __init__.py  __main__.py  algorithm_optimizer.py  alpaca_api.py  alpaca_contract.py  app.py  artifacts.py  audit.py  bot_engine.py  capital_scaling.py  data_fetcher.py  data_validation.py  env.py  exc.py  exception_family.py  health.py  health_monitor.py  health_payload.py  hyperparams.json  imports.py  indicator_manager.py  indicators.py  logging.py  logging_filters.py  main.py  main_extended.py  main_trade_log_path.py  managed_secrets_transport.py  meta_learning.py  ml_model.py  model_loader.py  model_registry.py  model_stub.py  operator_presets.py  operator_ui.py  paths.py  pipeline.py  portfolio.py  portfolio_rl.py  position_sizing.py  (+16 more)
ai_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
alpaca/: __init__.py
artifacts/: alpaca-sweep-core.txt  alpaca-sweep-python-rest.txt  import-repair-report.md  junit.xml  make-test-all.txt  mypy-phase3.txt  mypy-version.txt  mypy.txt  pytest-core-contract.txt  pytest-core.txt  pytest-env-contract-py.txt  pytest-integration.txt  pytest-phase3.txt  pytest.txt  ruff-after.txt  ruff-baseline.txt  ruff-summary.txt  ruff-top-rules.tsv  ruff-version.txt  ruff.json  ruff.txt  summary.txt
backtester/: __init__.py  config.py  core.py  data_loader.py  grid_runner.py  logger.py  plot.py
comments/: test_failures.md
compat/: __init__.py  bot_engine.py
config/: __init__.py  prod_recommended_rollout.env.overlay
data/: AAPL.csv  AMZN.csv  GOOG.csv  META.csv  MSFT.csv  NVDA.csv  TSLA.csv  last_equity.txt  trades.csv  trades.csv.backup.1754412126  trades.csv.backup.1754412257  trades.csv.corrupted.backup.1754412638
data_validation/: __init__.py
deploy/: ai-trading.service
docs/: AI_TRADING_BUG_HUNT_PHASE1_MANIFEST.md  AI_TRADING_BUG_HUNT_PHASE2_P0_FINDINGS.md  AI_TRADING_BUG_HUNT_PHASE2_P1_FINDINGS.md  ALPHA_UPGRADE.md  API_KEY_SETUP.md  ARTIFACT_AUTHORITY.md  CENTRALIZED_IMPORTS.md  CODEX_MARKETPLACE_GUARDRAILS.md  CODEX_MCP_AND_SKILLS_SETUP.md  DEPLOYING.md  DEVELOPMENT.md  ENTRY_EXIT_SIGNALS.md  LEGACY_INVENTORY.md  LIVE_CAPITAL_RUNBOOK.md  MAX_FACTOR.md  OPERATIONS.md  OPERATOR_ASSISTANT_POLICY.md  RESEARCH_AUTOMATION.md  ROBUSTNESS_AUDIT.md  SECRETS_MANAGER_MIGRATION.md  SEED_TRADE_HISTORY.md  TECHNICAL_ANALYSIS.md  TRADING_SYSTEM_CHECKLIST.md  acceptance_matrix.md  ci-import-errors.md  data-providers.md  degraded_data_playbook.md  index.md  institutional_roadmap_30_60_90.md  model_governance.md  peak_performance.md  phase_gated_roadmap.md  precision_and_costs.md  provider_configuration.md  rate_limits_and_slos.md  risk_engine.md  slippage.md  slo_alerts.md
features/: __init__.py
memory/: 2026-04-22.md  2026-04-26.md
migrations/: env.py
openclaw_hooks/: README.md  coding_task.mjs  github_event.mjs  runtime_event.mjs
ops/: slo_thresholds.yaml
pydantic/: __init__.py  fields.py
pydantic_settings/: __init__.py
requirements/: dev.txt
retrain/: __init__.py  __main__.py
risk_engine/: __init__.py
runbooks/: broker_outage_response.md  data_stale_fallback_response.md  deploy_rollback.md  kill_switch_cancel_all.md  oms_lifecycle_parity_rollout.md
runtime/: after_hours_training.marker.json  after_hours_training_state.json  allocation_state.json  effective_policy.json  gate_effectiveness.jsonl  gate_effectiveness_summary.json  meta_model.joblib  meta_model.joblib.manifest.json  meta_retrain_history.json  oms_intents.db  oms_ledger.jsonl  rollout_state.json  run_manifest.json  tca_feedback.json
scripts/: INTEGRATION_GUIDE.py  ab_pacing_compare.py  agent_validate_changed.sh  algorithm_optimizer.py  audit.py  backtest.py  backtest_framework.py  bootstrap.sh  capture_alpaca_payload.py  check_ctx_fixes.sh  check_feed.py  check_metrics_forwarder.sh  check_metrics_threshold.py  circuit_breaker.py  codex_refactor.py  config_server.py  configure_test_env.py  connector_incident_dispatch.py  critical_fixes_validation.py  debug_alpaca.py  debug_cli.py  debug_drawdown.py  demo_centralized_imports.py  demo_drawdown_protection.py  demo_enhanced_debugging.py  demo_grid_search.py  demo_intelligent_position_management.py  demo_no_trade_bands.py  demo_position_holding.py  demo_short_selling_implementation.py  demo_test_environment.sh  demonstrate_optimization.py  demonstrate_optimization_simple.py  demonstrate_portfolio_optimization.py  download_backtest_data.py  error_handling.py  features.py  fetch_failed_workflow_logs.py  final_validation.py  final_validation_demo.py  (+106 more)
sklearn/: __init__.py
sklearn_stub/: __init__.py
strategies/: README.md  __init__.py  base.py  mean_reversion.py  momentum.py  moving_average_crossover.py
tests/: __init__.py  _netblock.py  conftest.py  dummy_model_util.py  mocks.py  optdeps.py  test___main___phase2_agent_78_cli.py  test_acceptance_rate_governor.py  test_adaptive_risk_controller_clustering.py  test_additional_coverage.py  test_advanced_features.py  test_after_hours_reload_env.py  test_after_hours_runtime_gonogo.py  (+683 more)
(+1587 files in other folders)
