[project]
name = "ai-trading-bot"
version = "0.0.0"
description = "AI trading bot (lightweight testable build)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pydantic==2.8.2",
  "requests>=2.31,<3",
  "Flask>=2.3,<3",
  "python-dateutil>=2.8.2,<3",
]

[project.optional-dependencies]
pandas = [
  "pandas>=2.0"
]
plot = [
  "matplotlib>=3.7"
]
ml = [
  "scikit-learn>=1.4",
  "torch>=2.2 ; platform_system != 'Windows'"
]
ta = [
  "ta>=0.11.0",
  "TA-Lib>=0.4.26"
]
all = [
  "ai-trading-bot[pandas,plot,ml,ta]"
]
test = ["pytest>=7.4", "pytest-cov>=4.1"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_trading*", "trade_execution*"]
exclude = ["tests*", "scripts*", "artifacts*"]

[tool.black]
line-length = 120
target-version = ["py312"]


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["ai_trading", "trade_execution", "tests", "tools"]
extend-exclude = ["**/.venv", "**/venv", "build", "dist", "notebooks", "artifacts", "tools/static_import_rewrites.txt"]

# Focus on safe mechanical families only.
[tool.ruff.lint]
select = ["E", "F", "UP", "DTZ", "T201"]  # AI-AGENT-REF: safe lint families
ignore = ["E501"]

# Allow prints in tests/tools; allow re-export F401 in package __init__ files.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T201"]
"tools/**" = ["T201", "E402"]
"scripts/**" = ["T201", "E402"]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]
markers = [
  "integration: tests that require network or vendor APIs",
  "slow: tests that are slow or long-running"
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
