[project]
name = "ai-trading-bot"
version = "0.0.0"
description = "AI trading bot (lightweight testable build)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==1.26.4",  # AI-AGENT-REF: pin NumPy to 1.x for pandas-ta compatibility
  "requests>=2.31,<3",
  # Runtime Alpaca SDK pin.
  "urllib3==1.26.20",
  "certifi>=2023.7.22",
  "charset-normalizer>=3.2,<4",
  "idna>=3.4,<4",
  "psutil>=5.9,<6",
  "portalocker==2.7.0",
  "alpaca-py==0.42.1",  # AI-AGENT-REF: runtime Alpaca SDK pin
  "finnhub-python>=2.4,<3",  # AI-AGENT-REF: optional Finnhub provider
  "joblib>=1.3,<2",
  "Flask>=3,<4",
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<6",
  "aiohttp>=3.9,<4",
  "msgpack==1.0.3",  # AI-AGENT-REF: used by Alpaca SDK and transport layers
  "pyyaml==6.0.1",
  "websockets==10.4",  # AI-AGENT-REF: keep compatible with yfinance pin
  "pydantic==2.8.2",
  "pydantic-settings>=2.2,<3",
  "tzdata>=2024.1",  # AI-AGENT-REF: ensure timezone data
  "pandas-market-calendars>=5.1,<6",  # AI-AGENT-REF: exchange calendars
  "schedule==1.2.2",
  "prometheus-client==0.20.0",
  "cachetools==5.3.3",
  "ratelimit==2.2.1",
  "python-dotenv==1.1.1",
  "python-dateutil>=2.8.2,<3",
  "cryptography>=41",
  "tenacity>=8",
  "scikit-learn==1.5.1",
  "scipy==1.13.1",
  "threadpoolctl==3.5.0",
  "pandas==2.2.2",
  "pyarrow==17.0.0",
  "yfinance==0.2.58",  # AI-AGENT-REF: Yahoo Finance data fetch (pre-websockets 13)
  "pybreaker==1.4.0",
  "numba>=0.57",  # AI-AGENT-REF: enable JIT-optimized indicators
  "statsmodels==0.14.5",
  "torch==2.3.1",
  "transformers==4.55.4",
  "hmmlearn==0.3.2",
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
pandas = [
  "pandas>=2.0"
]
plot = [
  "matplotlib==3.10.5"
]
ml = [
  "scikit-learn>=1.4",
  "torch>=2.2 ; platform_system != 'Windows'"
]
nlp = [
  "transformers>=4.55",
  "torch>=2.2 ; platform_system != 'Windows'",
]
ta = [
  "pandas-ta==0.3.14b0",
  "ta>=0.11.0",
  "TA-Lib>=0.4.26"
]
train = [
  "lightgbm==4.6.0",
  "xgboost==3.0.4",
  "optuna==4.5.0",
]
all = [
  "ai-trading-bot[pandas,plot,ml,ta,train,nlp]"
]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.92",
  "freezegun>=1.5",
  "alpaca-py==0.42.1",
  "psutil>=5.9,<6",
  "tenacity>=8",
  "hmmlearn==0.3.2",
  "SQLAlchemy>=2.0,<3",
]

[project.scripts]
validate-env = "ai_trading.tools.env_validate:main"
ai-offline-replay = "ai_trading.tools.offline_replay:main"
ai-oms-lifecycle-parity-replay = "ai_trading.tools.oms_lifecycle_parity_replay:main"
ai-retrain = "ai_trading.retrain:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_trading*"]
exclude = ["tests*", "scripts*", "artifacts*"]

[tool.setuptools.package-data]
"ai_trading.defaults" = ["*.json"]
"ai_trading.data" = ["*.csv"]

[tool.black]
line-length = 120
target-version = ["py312"]


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["ai_trading", "tests", "tools"]
extend-exclude = ["**/.venv", "**/venv", "build", "dist", "notebooks", "artifacts", "TROUBLESHOOTING.md"]

# Keep the repo-wide gate focused on correctness checks that are green for the
# current baseline. Broad style migrations such as import sorting, pyupgrade,
# and bugbear cleanup should be done in dedicated passes.
[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "T201", "TID251"]
ignore = ["E501"]

# Allow prints in tests/tools; allow re-export F401 in package __init__ files.
[tool.ruff.lint.per-file-ignores]
"conftest.py" = ["B010", "I001", "UP038"]
"tests/conftest.py" = ["B010", "E402", "F401", "I001", "UP038"]
"tests/**" = ["T201", "TID251"]
"tools/**" = ["T201", "E402", "TID251"]
"scripts/**" = ["T201", "E402", "TID251"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests.get" = { msg = "use ai_trading.utils.http.get" }
"requests.post" = { msg = "use ai_trading.utils.http.post" }
"requests.put" = { msg = "use ai_trading.utils.http.put" }
"requests.delete" = { msg = "use ai_trading.utils.http.delete" }
"requests.request" = { msg = "use ai_trading.utils.http.request" }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]
markers = [
  "integration: tests that require network or vendor APIs",
  "slow: tests that are slow or long-running",
  "no_test_credentials: run without globally injected Alpaca test credentials"
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
